additional ui refinements

--- a/src/app/modules/dashboard/components/dashboard-homeowners-info/dashboard-homeowners-info.component.html
+++ b/src/app/modules/dashboard/components/dashboard-homeowners-info/dashboard-homeowners-info.component.html
@@ -3,9 +3,8 @@
   <!-- personal information -->
   <div>
     <div class="content-title" fxLayout="row" fxLayoutAlign="start center">
-      <div fxFlex="50">Personal Information</div>
-    
-      <div  fxFlex="50" fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="20px">
+
+      <!-- <div fxFlex fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="20px">
         <div fxFlex="135px" class="actions-btns" fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="5px">
           <span class="p-buttonset" styleClass="p-button-sm">
             <button styleClass="p-button-sm" tooltipPosition="left" pTooltip="Done" pButton pRipple class="btn-done success" icon="pi pi-check"></button>
@@ -13,7 +12,7 @@
             <button styleClass="p-button-sm" tooltipPosition="top" pTooltip="Remove" pButton pRipple class="btn-remove danger" icon="pi pi-trash"></button>
           </span>
         </div>
-      </div>
+      </div> -->
     </div>
     <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="50px">
       <div class="pi-thumb" fxLayout="row" fxLayoutAlign="start center" fxFlex>
@@ -24,7 +23,7 @@
           </div>
         </div>
 
-        <div fxFlex class="upload-side-text pi-thumb" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="10px">
+        <div fxFlex class="upload-side-text pi-thumb" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="20px">
           <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
             <span>Lastname:</span>
             <span>Fuertes</span>
@@ -44,7 +43,7 @@
         </div>
       </div>
 
-      <div class="pi-thumb" fxFlex="22">
+      <div class="pi-thumb" fxFlex="25" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="8px">
         <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
           <span>Gender:</span>
           <span>Male</span>
@@ -63,7 +62,7 @@
         </div>
       </div>
 
-      <div class="pi-thumb" fxFlex="22">
+      <div class="pi-thumb" fxFlex="25" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="8px">
         <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
           <span>Contact No.:</span>
           <span>123454365</span>
@@ -85,7 +84,7 @@
   </div>
 
   <!-- spouse information -->
-  <div>
+  <!-- <div>
     <div class="content-title">Spouse Information</div>
     <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="50px">
       <div class="pi-thumb" fxFlex="25">
@@ -160,5 +159,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
