--- a/src/app/modules/dashboard/components/dashboard-homeowners/dashboard-homeowners.component.html
+++ b/src/app/modules/dashboard/components/dashboard-homeowners/dashboard-homeowners.component.html
@@ -9,9 +9,7 @@
           </div>
         </mat-panel-title>
         <mat-panel-description>
-          <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="10px">
-            <p-chip [pTooltip]="boarder?.status + ' Date: 10/10/2012 4:15:00 AM'" tooltipPosition="top" [label]="boarder?.status" [ngClass]="('chip-' + boarder?.status) | lowercase"></p-chip>
-          </div>
+
         </mat-panel-description>
       </mat-expansion-panel-header>
       <div class="noselect" fxLayout="row" fxLayoutAlign="start start">
@@ -19,6 +17,12 @@
           <mat-tab-group>
             <mat-tab label="Personal Information">
               <cma-dashboard-homeowners-info></cma-dashboard-homeowners-info>
+            </mat-tab>
+            <mat-tab label="Partner">
+            </mat-tab>
+            <mat-tab label="Children">
+            </mat-tab>
+            <mat-tab label="Occupants">
             </mat-tab>
             <mat-tab label="Documents">
               <cma-dashboard-homeowners-document></cma-dashboard-homeowners-document>
@@ -28,6 +32,11 @@
           </mat-tab-group>
         </div>
         <div></div>
+      </div>
+
+      <div class="btn-actions" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+        <i pTooltip="Edit" tooltipPosition="left" class="pi pi-pencil"></i>
+        <i pTooltip="Delete" tooltipPosition="right" class="pi pi-times"></i>
       </div>
     </mat-expansion-panel>
   </mat-accordion>
