--- a/src/app/modules/dashboard/components/dashboard-homeowners/dashboard-homeowners.component.scss
+++ b/src/app/modules/dashboard/components/dashboard-homeowners/dashboard-homeowners.component.scss
@@ -5,12 +5,9 @@
 :host {
   width: 100%;
 }
-.sel-chk {
-  padding: 0 3px;
-}
 .content {
   width: 100%;
-  min-height: 450px;
+  min-height: 380px;
   > div {
     &:first-child {
       margin-bottom: 0 !important;
@@ -27,15 +24,29 @@ img {
   height: 25px;
   width: 25px;
 }
+.btn-actions {
+  cursor: pointer;
+  height: 40px;
+  background-color: $color-gray-4;
+  border-top: thin $color-gray-3 solid;
+  .pi {
+    font-size: 0.9rem;
+    color: $color-gray-2;
+    &:hover {
+      color: $color-black-0;
+    }
+  }
+}
 :host ::ng-deep {
   .mat-tab-body-wrapper {
-    min-height: 400px;
+    min-height: 325px;
   }
   .mat-tab-body-content {
     padding: 20px 0;
   }
   .mat-tab-group {
     width: 100%;
+    padding: 0 30px;
   }
   .mat-accordion .mat-expansion-panel:first-of-type {
     border-top-right-radius: 2px;
@@ -106,7 +117,7 @@ img {
   }
   .mat-expansion-panel-body {
     background-color: $color-gray-4;
-    padding: 15px 20px 20px 20px;
+    padding: 20px 0 0 0;
     border-top: thin $color-gray-3 solid;
     > div {
       width: 100%;
