--- a/src/app/modules/dashboard/components/dashboard-homeowners/dashboard-homeowners.component.html
+++ b/src/app/modules/dashboard/components/dashboard-homeowners/dashboard-homeowners.component.html
@@ -18,16 +18,14 @@
             <mat-tab label="Personal Information">
               <cma-dashboard-homeowners-info></cma-dashboard-homeowners-info>
             </mat-tab>
-            <mat-tab label="Partner">
-            </mat-tab>
-            <mat-tab label="Children">
-            </mat-tab>
-            <mat-tab label="Occupants">
+            <mat-tab label="Tenants">
             </mat-tab>
             <mat-tab label="Documents">
               <cma-dashboard-homeowners-document></cma-dashboard-homeowners-document>
             </mat-tab>
             <mat-tab label="Payments">
+            </mat-tab>
+            <mat-tab label="Other">
             </mat-tab>
           </mat-tab-group>
         </div>
