--- a/src/styleguide/index.scss
+++ b/src/styleguide/index.scss
@@ -8,6 +8,8 @@
 @import './atoms/paginator';
 @import './atoms/dropdown';
 @import './atoms/input';
+@import './atoms/datepicker';
+
 
 @import './molecules/panel';
 @import './molecules/table';
