--- a/src/app/modules/dashboard/components/dashboard-homeowners-document/dashboard-homeowners-document.component.html
+++ b/src/app/modules/dashboard/components/dashboard-homeowners-document/dashboard-homeowners-document.component.html
@@ -1,4 +1,4 @@
-<div class="document-container" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="20px">
+<div class="document-container" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
   <div class="document-content" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="20px">
     <div fxLayout="row wrap" fxLayoutAlign="center start" fxLayoutGap="20px">
       <div *ngFor="let document of uploadDocuments" class="upload-thumb">
