--- a/src/app/modules/on-boarding/components/on-boarding-page/on-boarding-page.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-page/on-boarding-page.component.html
@@ -1,3 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center center" >
+<div fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="10px" >
+  <cma-stepper></cma-stepper>
   <router-outlet></router-outlet>
 </div>
