--- a/src/app/modules/on-boarding/components/on-boarding-partner-info/on-boarding-partner-info.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-partner-info/on-boarding-partner-info.component.scss
@@ -3,56 +3,28 @@
   @include onboarding-host-start ;
   place-content: flex-start !important;
 }
-.upload-thumb {
-  > div {
-    height: 120px;
-    width: 120px;
-    border: thin $color-gray-2 dashed;
-    border-radius: 2px;
-    background-color: $color-gray-3;
-    text-align: center;
-    flex-direction: column;
-    box-sizing: border-box;
-    display: flex;
-    place-content: center;
-    align-items: center;
-    margin-bottom: 5px;
-    cursor: pointer;
-  }
-  flex-direction: column;
-  box-sizing: border-box;
-  display: flex;
-  place-content: center;
-  align-items: center;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  max-width: 150px;
-  width: 150px;
-  text-align: center;
-  span {
-    font-size: 12px;
-  }
-  img {
-    height: 25px;
-    width: 25px;
-    margin-bottom: 10px;
-  }
-}
-.upload-container {
+.partner-container {
   padding: 30px;
   margin: 0 auto;
   width: 100%;
   height: 100%;
   box-shadow: $box-shadow;
   background-color: $color-white;
-  max-width: 800px;
-  max-height: 565px;
+  max-width: 815px;
+  max-height: 500px;
 }
 .content {
   margin-bottom: 20px;
   overflow: hidden;
   height: 100%;
-  max-width: 690px;
+}
+.content-partner {
+  h5 {
+    margin: 0 0 14px 0;
+  }
+  height: auto;
+  min-width: 650px;
+  padding-left: 10px;
 }
 .action-btns {
   margin-top: 20px;
@@ -62,7 +34,14 @@
   width: 100%;
 }
 :host ::ng-deep {
-  cma-input, cma-dropdown {
+  .p-calendar .p-inputtext {
+    max-width: 155px;
+  }
+  cma-upload {
+    min-width: 206px;
+    max-width: 206px;
+  }
+  cma-input, cma-dropdown, cma-datepicker, cma-upload {
     margin-bottom: 20px;
   }
   p-dropdown.dropdown .p-dropdown {
@@ -70,15 +49,25 @@
   }
 }
 @media (max-width: 1280px) {
-  .upload-container {
+  .partner-container {
     max-width: 100%;
     margin: 0;
     padding: 20px 20px;
     max-width: 100%;
   }
+  .header-content {
+    padding-bottom: 20px;
+    margin: 0 !important;
+  }
   .content {
     padding-top: 20px;
     width: 100%;
+  }
+  .content-partner {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    max-width: 845px;
   }
   h2 {
     margin-bottom: 10px !important;
