--- a/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.scss
@@ -1,35 +1,34 @@
 @import "src/styleguide/index";
 :host {
-  @include onboarding-host;
-  place-content: flex-start !important;
+  @include onboarding-host-start ;
+  place-content: flex-center !important;
+  margin-bottom: 150px;
 }
 .header-content {
-  border-bottom: thin $color-gray-3 solid;
-  padding-bottom: 35px;
+  padding-bottom: 5px;
 }
-.detail-container {
+.personal-inner-container {
+  max-height: 500px;
+  min-height: 500px;
+  height: 500px;
+}
+.personal-container {
   padding: 30px;
   margin: 0 auto;
   width: 100%;
   height: 100%;
   box-shadow: $box-shadow;
   background-color: $color-white;
-  max-width: 900px;
+  max-width: 815px;
+  max-height: 635px;
 }
 .content {
   margin-bottom: 20px;
   overflow: hidden;
   height: 100%;
+  max-width: 800px;
 }
 .content-personal {
-  h5 {
-    margin: 0 0 14px 0;
-  }
-  height: auto;
-  min-width: 650px;
-  padding-left: 10px;
-}
-.spouse-personal {
   h5 {
     margin: 0 0 14px 0;
   }
@@ -49,8 +48,8 @@
     max-width: 155px;
   }
   cma-upload {
-    min-width: 190px;
-    max-width: 190px;
+    min-width: 206px;
+    max-width: 206px;
   }
   cma-input, cma-dropdown, cma-datepicker, cma-upload {
     margin-bottom: 20px;
@@ -60,11 +59,11 @@
   }
 }
 @media (max-width: 1280px) {
-  .detail-container {
+  .personal-container {
     max-width: 100%;
     margin: 0;
     padding: 20px 20px;
-    max-width: 100%;
+    max-width: 850px;
   }
   .header-content {
     padding-bottom: 20px;
@@ -74,7 +73,7 @@
     padding-top: 20px;
     width: 100%;
   }
-  .content-personal, .spouse-personal {
+  .content-personal {
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
