--- a/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.scss
@@ -1,19 +1,21 @@
 @import "src/styleguide/index";
 :host {
-  @include onboarding-host;
+  @include onboarding-host-start ;
   place-content: flex-start !important;
 }
 .header-content {
   border-bottom: thin $color-gray-3 solid;
 }
-.detail-container {
-  padding: 20px 30px 0 30px;
+.review-container {
+  padding: 20px 30px 5px 30px;
   margin: 0 auto;
   width: 100%;
   height: 100%;
   box-shadow: $box-shadow;
   background-color: $color-white;
   max-width: 900px !important;
+  min-height: 1000px;
+  margin-bottom: 20px;
 }
 .document-thumb {
   font-size: 12px;
@@ -37,21 +39,20 @@
 }
 .content-personal {
   h5 {
-    margin: 0 0 14px 0;
+    margin: 0 0 18px 0;
   }
   height: auto;
   min-width: 650px;
 }
-.spouse-personal {
+.documents-container {
   h5 {
-    margin: 0 0 14px 0;
+    margin-top: 0 !important;
+    margin-bottom: 10px !important;
   }
-  height: auto;
-  min-width: 650px;
 }
 .action-btns {
-  margin-top: 20px;
-  border-top: thin #f1f1f1 solid;
+  margin-top: 40px;
+  border-top: thin $color-gray-3 solid;
   padding-top: 20px;
   padding-bottom: 5px;
   width: 100%;
