--- a/src/app/modules/on-boarding/components/on-boarding-type/on-boarding-type.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-type/on-boarding-type.component.scss
@@ -1,7 +1,7 @@
 
 @import "src/styleguide/index";
 :host {
-  @include onboarding-host;
+  @include onboarding-host-start ;
 }
 img {
   height: 70px;
@@ -18,13 +18,14 @@ h2 {
 }
 .type-container {
   margin-top: 50px;
-  width: 900px;
-  height: 500px;
+  width: 700px;
+  height: 435px;
   box-shadow: $box-shadow;
   background-color: $color-white;
   margin: 0 auto;
-  min-width: 900px !important;
-  max-width: 900px !important;
+  min-width: 700px  !important;
+  max-width: 700px  !important;
+  margin-bottom: 150px;
 }
 :host ::ng-deep {
   .mat-card {
