--- a/src/app/shared/components/cmd-datepicker/cmd-datepicker.component.scss
+++ b/src/app/shared/components/cmd-datepicker/cmd-datepicker.component.scss
@@ -2,6 +2,6 @@
 :host ::ng-deep {
   .p-button.p-button-icon-only {
     background: $color-gray-2;
-    border: 1px solid $color-gray-2;
+    border: thin solid $color-gray-2;
   }
 }
