--- a/src/styleguide/atoms/host.scss
+++ b/src/styleguide/atoms/host.scss
@@ -1,5 +1,5 @@
 
-@mixin onboarding-host {
+@mixin onboarding-host-start {
   width: 100%;
   height: 100%;
   flex-direction: column;
@@ -7,4 +7,14 @@
   display: flex;
   place-content: center;
   align-items: center;
+}
+
+@mixin onboarding-host-start {
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  box-sizing: border-box;
+  display: flex;
+  place-content:flex-start;
+  align-items: flex-start;
 }
