--- a/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.html
@@ -42,7 +42,7 @@
   </div>
 
   <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
-    <button pButton pRipple type="button" routerLink="/on-boarding/type" label="Previous" class="p-button-rounded default"></button>
-    <button pButton pRipple type="button" routerLink="/on-boarding/partner" label="Next" class="p-button-rounded success"></button>
+    <button pButton pRipple type="button" (click)="onPrev()" label="Previous" class="p-button-rounded default"></button>
+    <button pButton pRipple type="button" (click)="onNext()" label="Next" class="p-button-rounded success"></button>
   </div>
 </div>
