--- a/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
@@ -81,7 +81,7 @@
       </div>
 
       <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
-        <button pButton pRipple type="button" routerLink="/on-boarding/documents" label="Previous" class="p-button-rounded default"></button>
+        <button pButton pRipple type="button" (click)="onPrev()" label="Previous" class="p-button-rounded default"></button>
         <button pButton pRipple type="button" routerLink="/on-boarding/for-approval" label="Submit" class="p-button-rounded success"></button>
       </div>
     </div>
