--- a/src/app/modules/on-boarding/components/on-boarding-type/on-boarding-type.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-type/on-boarding-type.component.html
@@ -25,6 +25,6 @@
       </mat-card>
     </div>
 
-    <button [disabled]="isDisabled" routerLink="/on-boarding/personal" pButton pRipple type="button" label="Next" class="p-button-rounded success"></button>
+    <button [disabled]="isDisabled" (click)="onNext()" pButton pRipple type="button" label="Next" class="p-button-rounded success"></button>
   </div>
 </div>
