--- a/src/app/shared/components/cma-stepper/cma-stepper.component.scss
+++ b/src/app/shared/components/cma-stepper/cma-stepper.component.scss
@@ -3,7 +3,16 @@
   width: 100%;
 }
 :host ::ng-deep {
-  .active .p-timeline-event-marker {
+  .active-one .p-timeline-event:first-child .p-timeline-event-marker {
+    border: 2px solid $color-blue !important;
+  }
+  .active-two .p-timeline-event:nth-child(2) .p-timeline-event-marker {
+    border: 2px solid $color-blue !important;
+  }
+  .active-three .p-timeline-event:nth-child(3) .p-timeline-event-marker {
+    border: 2px solid $color-blue !important;
+  }
+  .active-four .p-timeline-event:nth-child(4) .p-timeline-event-marker {
     border: 2px solid $color-blue !important;
   }
   .p-timeline.p-timeline-horizontal .p-timeline-event-opposite, .p-timeline.p-timeline-horizontal .p-timeline-event-content {
