persist stepper when refreshed

--- a/src/app/modules/on-boarding/components/on-boarding-for-approval/on-boarding-for-approval.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-for-approval/on-boarding-for-approval.component.scss
@@ -1,5 +1,9 @@
 
 @import "src/styleguide/index";
+:host {
+  @include onboarding-host-start ;
+  place-content: center !important;
+}
 .for-approval-container {
   margin-top: 50px;
   width: 900px;
