--- a/src/app/modules/on-boarding/components/on-boarding-page/on-boarding-page.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-page/on-boarding-page.component.scss
@@ -16,6 +16,14 @@ div {
     place-content: flex-start;
     align-items: center;
   }
+  cma-on-boarding-for-approval {
+    display: flex;
+    place-content: center;
+    align-items: center;
+  }
+  cma-on-boarding-for-approval {
+    margin: 0 auto;
+  }
   cma-stepper {
     margin-top: 25px;
   }
