--- a/src/app/shared/components/cmd-datepicker/cmd-datepicker.component.html
+++ b/src/app/shared/components/cmd-datepicker/cmd-datepicker.component.html
@@ -1,3 +1,3 @@
 <div fxLayout="row" fxLayoutAlign="start center">
-  <p-calendar appendTo="body" showButtonBar="true" [placeholder]="placeholder" [showIcon]="true"></p-calendar>
+  <p-calendar appendTo="body" showButtonBar="true" [readonlyInput]="true" [placeholder]="placeholder" read [showIcon]="true"></p-calendar>
 </div>
