--- a/src/styleguide/index.scss
+++ b/src/styleguide/index.scss
@@ -9,8 +9,9 @@
 @import './atoms/dropdown';
 @import './atoms/input';
 @import './atoms/datepicker';
+@import './atoms/label';
 
-
+@import './molecules/dialog';
 @import './molecules/panel';
 @import './molecules/table';
 
