--- a/src/app/shared/components/cma-select-option/cma-select-option.component.html
+++ b/src/app/shared/components/cma-select-option/cma-select-option.component.html
@@ -1,1 +1,3 @@
-<p-selectButton appendTo="body" [options]="options" [(ngModel)]="selectedItem" optionLabel="label" optionValue="value"></p-selectButton>
+<div [formGroup]="form">
+  <p-selectButton [formControlName]="controlName" appendTo="body" [options]="options" optionLabel="label" optionValue="value"></p-selectButton>
+</div>
